adding anguler meterial design css to web interface

--- a/polling-app-web/index.html
+++ b/polling-app-web/index.html
@@ -10,12 +10,21 @@
 </head>
 
 <body ng-app='starterApp'>
+  <!-- Angular Material requires Angular.js Libraries -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-route.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-animate.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-aria.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-messages.min.js"></script>
+
+  <!-- Angular Material Library -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+
+  <!-- This application bootstrap  -->
   <script type="text/javascript" src="core.js"></script>
 
   <div ng-controller="pollingController">
-    <div>
+    <!--<div>
         <nav>
           <ul>
             <li><a ng-href="#!/">Home</a></li>
@@ -23,10 +32,23 @@
             <li><a ng-href="#!/view">View</a></li>
           </ul>
         </nav>
-    </div>
+    </div>-->
+    <md-toolbar layout="row" flex="1">
+      <md-menu-bar>
+        <md-menu>
+          <md-button ng-href="#!/">Home</md-button>
+        </md-menu>
+        <md-menu>
+          <md-button ng-href="#!/create">Create poll</md-button>
+        </md-menu>
+        <md-menu>
+          <md-button ng-href="#!/view">View Poll</md-button>
+        </md-menu>
+      </md-menu-bar>
+    </md-toolbar>
     <br/>
 
-    <div ng-view>
+    <div flex layout="column" layout-align="left" ng-view>
       <!-- This DIV loads templates depending upon route -->
     </div>
 
